# guichan

./: CMakeLists.txt  configure.in  configure~
examples/: sdl.hpp  sdlwidgets
include/: config.hpp.in~
include/guichan/: sdl.hpp
include/guichan/sdl2/: Makefile.am  sdlgraphics.hpp  sdlimage.hpp  sdlimageloader.hpp  sdlinput.hpp  sdlpixel.hpp
src/contrib/sdl2/: sdltruetypefont.cpp
src/sdl/: Makefile.am  sdlinput.cpp
src/sdl2/: Makefile.am  guichan_sdl2.pc.in  sdl2graphics.cpp  sdlgraphics.cpp  sdlimage.cpp  sdlimageloader.cpp  sdlinput.cpp
