AC_PREREQ(2.57)

AC_INIT(guichan, 0.9.0, olof.naessen@gmail.com, guichan)

AC_CANONICAL_SYSTEM
AC_SUBST(target)

ALLEGRO="disabled"
OPENGL="disabled"
SDL2="disabled"
SDL2IMAGE="disabled"
dnl GLUT="disabled"
dnl X="disabled"

GUICHAN_MAJOR_VERSION=0
GUICHAN_MINOR_VERSION=9
GUICHAN_MICRO_VERSION=0
GUICHAN_INTERFACE_AGE=0
GUICHAN_BINARY_AGE=0
GUICHAN_VERSION=$GUICHAN_MAJOR_VERSION.$GUICHAN_MINOR_VERSION.$GUICHAN_MICRO_VERSION

AC_SUBST(GUICHAN_MAJOR_VERSION)
AC_SUBST(GUICHAN_MINOR_VERSION)
AC_SUBST(GUICHAN_MICRO_VERSION)
AC_SUBST(GUICHAN_INTERFACE_AGE)
AC_SUBST(GUICHAN_BINARY_AGE)
AC_SUBST(GUICHAN_VERSION)

LT_RELEASE=$GUICHAN_MAJOR_VERSION.$GUICHAN_MINOR_VERSION
LT_CURRENT=`expr $GUICHAN_MICRO_VERSION - $GUICHAN_INTERFACE_AGE`
LT_REVISION=$GUICHAN_INTERFACE_AGE
LT_AGE=`expr $GUICHAN_BINARY_AGE - $GUICHAN_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_INIT_AUTOMAKE(guichan, $GUICHAN_VERSION)
AM_CONFIG_HEADER([include/config.hpp])

AC_CONFIG_SRCDIR([src/gui.cpp])

AC_PROG_CXX
AC_PROG_CC

AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AC_PROG_MAKE_SET
AC_LANG_CPLUSPLUS
AC_PROG_INSTALL
AC_HEADER_STDC

CXXFLAGS="$CXXFLAGS -Wall -Wno-unused -DGUICHAN_BUILD"

dnl NoX()
dnl {
dnl   AC_MSG_WARN(Xlib support skipped when Xlib not found.)
dnl   X="no"
dnl }

dnl HaveX()
dnl {
dnl   X="yes"
dnl   X_LIBS="$X_LIBS -L$x_libraries -lX11"
dnl   GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS x"
dnl }

NoOpenGL()
{
  AC_MSG_WARN(OpenGL support skipped when OpenGL not found.)
  OPENGL="no"
}

HaveOpenGL()
{
  OPENGL="yes"
  GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS opengl"
}

ForceOpenGL()
{
  AC_MSG_WARN(OpenGL support forced.)
  OPENGL="forced"
  GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS opengl"
}

dnl NoGLUT()
dnl {
dnl   AC_MSG_WARN(GLUT support skipped when GLUT not found.)
dnl   GLUT="no"
dnl }

dnl HaveGLUT()
dnl {
dnl   GLUT="yes"
dnl   GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS glut"
dnl }

dnl ForceGLUT()
dnl {
dnl   AC_MSG_WARN(GLUT support forced.)
dnl   GLUT="forced"
dnl   GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS glut"
dnl }

NoSDL2Image()
{
  AC_MSG_WARN(SDL2_image support skipped when SDL2_image not found.)
  SDL2IMAGE="no"
}

HaveSDL2Image()
{
  SDL2IMAGE="yes"
  SDL2_LIBS="$SDL_LIBS -lSDL2_image"
  CPPFLAGS="$CPPFLAGS `sdl2-config --cflags`"
}

ForceSDL2Image()
{
  AC_MSG_WARN(SDL2 Image support forced.)
  SDLIMAGE="forced"
}

HaveSDL2()
{
  GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS sdl2"
}

ForceSDL2()
{
  AC_MSG_WARN(SDL support forced.)
  GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS sdl2"
}

NoAllegro()
{
  AC_MSG_WARN(Allegro support skipped when Allegro not found.)
}

HaveAllegro()
{
  ALLEGRO="yes"
  GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS allegro"
}

ForceAllegro()
{
  AC_MSG_WARN(Allegro support forced.)
  ALLEGRO="forced"
  GUICHAN_EXTRADIRS="$GUICHAN_EXTRADIRS allegro"
}

dnl AC_ARG_ENABLE(x,	     
dnl [  --enable-x	Enable Xlib support [default=no]], 
dnl                , enable_x=no)
dnl if test x$enable_x = xyes; then
dnl   AC_PATH_X
dnl   if test "x$no_x" = "xyes"; then
dnl     NoX
dnl   else
dnl   dnl   AC_CHECK_HEADERS([X11/Xlib.h])
dnl   dnl   AC_CHECK_LIB([X11], [XOpenDisplay], HaveX, NoX)
dnl     HaveX
dnl   fi
dnl fi

AC_ARG_ENABLE(opengl,	     
[  --enable-opengl	Enable OpenGL support [default=yes]], 
               , enable_opengl=yes)
AC_ARG_ENABLE(force_opengl,	  
[  --enable-force-opengl     Force OpenGL support (skip checks for OpenGL) [default=no]],
              , enable_force_opengl=no)
if test x$enable_opengl = xyes; then
  if test x$enable_force_opengl = xno; then
    AC_CHECK_HEADERS(GL/gl.h)
    AC_CHECK_LIB([GL], [glBegin], HaveOpenGL, NoOpenGL)
  else
    ForceOpenGL
  fi
fi

dnl AC_ARG_ENABLE(glut,	     
dnl [  --enable-glut	Enable GLUT support [default=yes]], 
dnl                , enable_glut=yes)
dnl AC_ARG_ENABLE(force_glut,	  
dnl [  --enable-force-glut     Force GLUT support (skip checks for GLUT) [default=no]],
dnl               , enable_force_glut=no)
dnl if test x$enable_glut = xyes; then
dnl   if test x$enable_force_glut = xno; then
dnl     AC_CHECK_HEADERS(GL/glut.h)
dnl     AC_CHECK_LIB([glut], [glutInit], HaveGLUT, NoGLUT)
dnl   else
dnl     ForceGLUT
dnl   fi
dnl fi

AC_ARG_ENABLE(sdl2image,	     
[  --enable-sdl2image	Enable SDL2_image support [default=yes]], 
              , enable_sdl2image=yes)
AC_ARG_ENABLE(force_sdlimage,	  
[  --enable-force-sdl2image     Force SDL2 Image support (skip checks for SDL2 Image) [default=no]],
              , enable_force_sdl2image=no)
if test x$enable_sdl2image = xyes; then
  if test x$enable_force_sdl2image = xno; then
    AC_CHECK_HEADERS([SDL2/SDL_image.h])
    AC_CHECK_LIB([SDL2_image], [IMG_Load], HaveSDL2Image, NoSDL2Image)
  else
    ForceSDL2Image
  fi
fi

AC_ARG_ENABLE(allegro,	  
[  --enable-allegro	  Enable Allegro support [default=yes]],
              , enable_allegro=yes)
AC_ARG_ENABLE(force_allegro,	  
[  --enable-force-allegro     Force Allegro support (skip checks for Allegro) [default=no]],
              , enable_force_allegro=no)
if test x$enable_allegro = xyes; then
  if test x$enable_force_allegro = xno; then
    AC_CHECK_HEADERS([allegro.h])
    AC_CHECK_PROG(HAVE_ALLEGRO, allegro-config, yes)
    if test "x$HAVE_ALLEGRO" != "xyes"; then
      NoAllegro  
    else
      HaveAllegro
    fi
  else
    ForceAllegro
  fi
fi

AC_ARG_ENABLE(sdl2,	  
[  --enable-sdl2  Enable SDL2 support [default=yes]],
             , enable_sdl2=yes)
AC_ARG_ENABLE(force_sdl2,	  
[  --enable-force-sdl2     Force SDL2 support (skip checks for SDL) [default=no]],
              , enable_force_sdl2=no)
if test x$enable_sdl2 = xyes; then
  if test x$enable_force_sdl2 = xno; then
    AC_CHECK_HEADERS(SDL2/SDL.h)
    AC_CHECK_PROG(HAVE_SDL2, sdl2-config, yes)
    if test "x$HAVE_SDL2" != "xyes"; then
      SDL2="no"
    else
      SDL2="yes"
    fi
  else
    SDL2="forced"
    ForceSDL2
  fi
fi

if test $SDL2 = "yes"; then
  if test $SDL2IMAGE = "no"; then
    SDL2="no"
    AC_MSG_WARN(SDL2 support skipped when SDL2_image not found.)
  else
    HaveSDL2
  fi
else
  SDL2="no"
  AC_MSG_WARN(SDL2 support skipped when SDL2 not found.)
fi

AC_SUBST([GUICHAN_EXTRADIRS])

AC_OUTPUT([
Makefile
guichan.pc
examples/Makefile
include/Makefile
include/guichan/Makefile
include/guichan/allegro/Makefile
include/guichan/contrib/Makefile
include/guichan/contrib/allegro/Makefile
include/guichan/contrib/opengl/Makefile
include/guichan/contrib/sdl/Makefile
include/guichan/contrib/widgets/Makefile
include/guichan/hge/Makefile
include/guichan/opengl/Makefile
include/guichan/openlayer/Makefile
include/guichan/sdl2/Makefile
include/guichan/widgets/Makefile
src/Makefile
src/allegro/Makefile
src/contrib/Makefile
src/contrib/allegro/Makefile
src/contrib/opengl/Makefile
src/contrib/sdl2/Makefile
src/contrib/widgets/Makefile
src/hge/Makefile
src/opengl/Makefile
src/opengl/guichan_opengl.pc
src/openlayer/Makefile
src/sdl2/Makefile
src/sdl2/guichan_sdl2.pc
src/widgets/Makefile])
echo ""
echo "IMPORTANT! You are about install a BETA version of Guichan"
echo "which most likely will lose binary compatibility with the"
echo "future stable release. This release should only be used" 
echo "for testing."
echo ""
echo "-------------------------------"
echo "Guichan ready for compilation!" 
echo "-------------------------------"
echo "* Allegro   = "$ALLEGRO
echo "* HGE       = no (Windows specific and cannot be built)"
echo "* OpenGL    = "$OPENGL
echo "* OpenLayer = no (Requires static build and cannot be built)"
echo "* SDL2       = "$SDL2
echo "* SDL2 Image = "$SDL2IMAGE
echo "--------------------------------"
